--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ owner:
   disqus-shortname:
   twitter: sahilsonu
   facebook: #sahilsk666
-  github: #sahilsk
+  github: sahilsk
   stackexchange: #http://stackoverflow.com/users/123456/username
   linkedin: #username
   instagram: #username
