--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ owner:
   stackexchange: #http://stackoverflow.com/users/123456/username
   linkedin: #username
   instagram: #username
-  flickr: #username
+  flickr: 95959458@N02
   tumblr: #username
   google:
     plus: #username
