removed site-logo

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: DevOps Story
 locale: en_US
 description: ..Daily DevOps Chores
-logo: site-logo.png
+#logo: site-logo.png
 search: true
 url: http://sahilsk.github.io
 
