removed blog nav

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: DevOps Story
 locale: en_US
-description: ...awesome daily chores
+description: ...awesome chores of an engineer
 #logo: site-logo.png
 search: true
 url: http://sahilsk.github.io
