disqus comment activated

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ owner:
   name: Sonu K. Meena
   avatar: sahilsk.jpg
   email: sonukr666@gmail.com
-  disqus-shortname:
+  disqus-shortname: sahilsk
   twitter: sahilsonu
   facebook: #sahilsk666
   github: sahilsk
