--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ owner:
   facebook: #sahilsk666
   github: sahilsk
   stackexchange: #http://stackoverflow.com/users/123456/username
-  linkedin: #username
+  linkedin: sahilsk
   instagram: #username
   flickr: 95959458@N02
   tumblr: #username
