added google analytis and webmaster

--- a/_config.yml
+++ b/_config.yml
@@ -46,8 +46,8 @@ owner:
   tumblr: #username
   google:
     plus: #username
-    analytics:
-    verify:
+    analytics: UA-54431806-1
+    verify: wIdP5ZFcEf62OpDEsUmyWSam3AvFFw2EF5J34alRRXY
     ad-client:
     ad-slot:
   bing-verify:
