--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ locale: en_US
 description: ...awesome chores of an engineer
 #logo: site-logo.png
 search: true
+#url: http://localhost:4000
 url: http://sahilsk.github.io
 
 
