--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -10,11 +10,11 @@ billy_rick:
   google:
     plus: BillyRick
 
-cornelius_fiddlebone:
-  name: Cornelius Fiddlebone
-  email: cornelius@thewhip.com
-  bio: "I ordered what?"
-  avatar: bio-photo.jpg
-  twitter: rhymeswithsackit
+sahilsk:
+  name: Sonu K. Meena
+  email: sonukr.meena@gmail.com
+  bio: "aspiring full stack developer and architect interested in scalability, performance and distributed systems."
+  avatar: sahilsk.jpg
+  twitter: sonusahil
   google:
-    plus: CorneliusFiddlebone
+    plus: sonukumarmeena
