--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title: DevOps Story
+title: Full Stack Story
 locale: en_US
 description: ...awesome chores of an engineer
 #logo: site-logo.png
