--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: http://sahilsk.github.io
 # Jekyll configuration
 
 permalink:   /:categories/:title/
-highlighter: pygments
+highlighter: rouge 
 sass:
   sass_dir: _sass
   style: compressed
