--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: ...awesome chores of an engineer
 #logo: site-logo.png
 search: true
 #url: http://localhost:4000
-url: http://sahilsk.github.io
+url: https://sahilsk.github.io
 
 
 # Jekyll configuration
